<resources>
    <string name="app_name">FeelsBook</string>

    <string name="edit_comment">Enter a comment (optional)</string>

    <string name="button_love">LOVE</string>
    <string name="button_joy">JOY</string>
    <string name="button_surprise">SURPRISE</string>
    <string name="button_anger">ANGER</string>
    <string name="button_sadness">SADNESS</string>
    <string name="button_fear">FEAR</string>

    <string name="button_tally">View Statistics</string>
    <string name="button_history">View History</string>

    <string name="tally_header">Statistics</string>

    <string name="history_header">History</string>
    <string name="button_view">View and Edit</string>

    <string name="button_edit">Edit</string>
    <string name="button_delete">Delete</string>

    <string name="button_save">Save</string>
</resources>
